# bard

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
crates/bard/: Cargo.toml
crates/bard/src/: main.rs
crates/bard/src/terminal/: mod.rs
crates/lyrics-rs/: Cargo.toml
crates/lyrics-rs/src/: main.rs
crates/lyrics-rs/src/terminal/: render.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs
crates/shared/src/lyrics/: display.rs  mod.rs
crates/shared/src/models/: mod.rs
crates/shared/src/player/: fetcher.rs  mod.rs
crates/shared/src/tidal/: auth.rs  fetcher.rs  mod.rs
crates/waybar-bard/: Cargo.toml
crates/waybar-bard/src/: main.rs
crates/waybar-bard/src/models/: waybar.rs
crates/waybar-bard/src/waybar/: mod.rs  render.rs
crates/waybar-lyrics-rs/: Cargo.toml
crates/waybar-lyrics-rs/src/models/: mod.rs
src/: config.rs  main.rs
src/cmus/: fetcher.rs  mod.rs  render.rs
src/lyrics/: display.rs  fetcher.rs  mod.rs  parser.rs
src/models/: lyrics.rs  mod.rs  song.rs  waybar.rs
src/tidal/: fetcher.rs  mod.rs
