[package]
name = "waybar-lyrics-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust-based lyrics display for music player that integrates with Waybar"
authors = ["Guilherme Puszkarek"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
signal-hook = "0.3"
anyhow = "1.0"
thiserror = "1.0"
lofty = "0.22.2"
dotenv = "0.15.0"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = "0.12.15"
